--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,22 +1,24 @@
-# Sample localization file for English. Add more files in this directory for other locales.
-# See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
-en:
+---
+de:
   spree:
     admin:
       tab:
-        seven: 'seven'
-    errors: Fehler
-    filter:
-      address: Address-Filter
-      include_deleted_addresses: Gelöschte Adressen inkludieren
-    flash: Flash
-    foreign_id: Foreign ID
-    label: Label
-    no_recipients: Keine Empfangsziele gefunden mit dieser Konfiguration.
-    no_reload: Duplikate erlauben
-    performance_tracking: Performance Tracking
-    response: Antwort
-    send: Senden
-    sms: SMS
-    text: Text
+        seven: seven
+    spree_seven:
+      api_key: API-Schlüssel
+      enabled?: Aktiv?
+      errors: Fehler
+      filter:
+        address: Address-Filter
+        include_deleted_addresses: Gelöschte Adressen inkludieren
+      flash: Flash
+      foreign_id: Foreign ID
+      from: Von
+      label: Label
+      no_recipients: Keine Empfangsziele gefunden mit dieser Konfiguration.
+      no_reload: Duplikate erlauben
+      performance_tracking: Performance Tracking
+      response: Antwort
+      send: Senden
+      sms: SMS
+      text: Text
