--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,22 +1,24 @@
-# Sample localization file for English. Add more files in this directory for other locales.
-# See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
+---
 en:
   spree:
     admin:
       tab:
         seven: 'seven'
-    errors: Errors
-    filter:
-      address: Address Filters
-      include_deleted_addresses: Include deleted addresses
-    flash: Flash
-    foreign_id: Foreign ID
-    label: Label
-    no_recipients: No recipients found for the given configuration.
-    no_reload: Allow duplicates
-    performance_tracking: Performance Tracking
-    response: Response
-    send: Send
-    sms: SMS
-    text: Text
+    spree_seven:
+      api_key: API Key
+      enabled?: Enabled?
+      errors: Errors
+      filter:
+        address: Address Filters
+        include_deleted_addresses: Include deleted addresses
+      flash: Flash
+      foreign_id: Foreign ID
+      from: From
+      label: Label
+      no_recipients: No recipients found for the given configuration.
+      no_reload: Allow duplicates
+      performance_tracking: Performance Tracking
+      response: Response
+      send: Send
+      sms: SMS
+      text: Text
